@@ -6,6 +6,7 @@
 	original versionallowed for variable encodings of integral types in
 	archived data, but not for the count of the nuymber of items in the
 	array :-(
+	* Source/NSPortCoder.m: Similar fixes for encoding/decoding arrays.
 
 2012-02-27  Fred Kiefer <FredKiefer@gmx.de>
 
